<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.constraintlayout.widget.ConstraintLayout


        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:textAlignment="center"
        tools:context=".BMICalculator">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_nav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:background="@color/white"
            app:itemIconTint="@color/black"
            app:itemTextColor="@color/grey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calculate_button"
            app:layout_constraintVertical_bias="1.0"
            app:menu="@menu/menu" />
        <View
            android:id="@+id/titledivider"
            android:layout_width="fill_parent"
            android:layout_height="2px"
            android:layout_alignParentRight="true"
            android:layout_marginTop="12dp"
            android:background="#777777"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/bottom_nav" />

        <!---                                                                    HEADER START                                                       -->


        <!---                                                                    BUTTON TABS                                                       -->



        <TextView
            android:id="@+id/tools_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/tools_title"
            android:text="@string/tools_title"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/divider_1"
            android:layout_width="fill_parent"
            android:layout_height="2px"
            android:layout_alignParentRight="true"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="8dp"
            android:background="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/bmi_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            />

        <Button
            android:id="@+id/bmi_button"
            android:layout_width="110dp"
            android:layout_height="57dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="#A2C7FF"
            android:contentDescription="@string/calculator"
            android:drawableLeft="@drawable/ic_baseline_calculate_24"
            android:text="@string/calculator"
            android:textColor="#FFFFFF"
            android:textSize="12sp"
            app:cornerRadius="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tools_title" />

        <Button
            android:id="@+id/timer_button"
            android:layout_width="wrap_content"
            android:layout_height="57dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/timer_button"
            android:textSize="12sp"
            app:cornerRadius="10dp"
            app:icon="@drawable/timer"
            app:layout_constraintStart_toEndOf="@+id/bmi_button"
            app:layout_constraintTop_toBottomOf="@+id/tools_title" />

        <Button
            android:id="@+id/reminder_button"
            android:layout_width="wrap_content"
            android:layout_height="57dp"
            android:layout_marginStart="8dp"
            android:text="@string/reminder_button"
            android:textSize="12sp"
            app:cornerRadius="10dp"
            app:icon="@drawable/reminder"
            app:layout_constraintStart_toEndOf="@+id/timer_button"
            app:layout_constraintTop_toTopOf="@+id/timer_button" />

        <!---                                                                    BUTTON TABS                                                       -->
        <!---                                                                    HEADER END                                                        -->

        <TextView
            android:id="@+id/weight_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="7dp"
            android:text="@string/weight"
            android:textColor="#000000"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/height_input"
            app:layout_constraintEnd_toStartOf="@+id/weight_input"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bmi_button"
            app:layout_constraintVertical_bias="0.405" />

        <EditText
            android:id="@+id/weight_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="28dp"
            android:background="@drawable/round_border"
            android:elegantTextHeight="true"
            android:ems="10"
            android:hint="@string/weight_hint"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            android:textColorHint="#917D7D"
            app:layout_constraintStart_toEndOf="@+id/weight_id"
            app:layout_constraintTop_toBottomOf="@+id/bmi_button" />

        <TextView
            android:id="@+id/height_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="7dp"
            android:text="@string/height"
            android:textColor="#000000"
            android:textSize="30sp"
            app:layout_constraintEnd_toStartOf="@+id/height_input"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/weight_id" />

        <EditText
            android:id="@+id/height_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="19dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/round_border"
            android:elegantTextHeight="true"
            android:ems="10"
            android:hint="@string/height_hint"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            android:textColorHint="#917D7D"
            app:layout_constraintStart_toEndOf="@+id/height_id"
            app:layout_constraintTop_toBottomOf="@+id/weight_input"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/BMI_Final"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="300dp"
            android:text="@string/bmi_quote"
            android:textColor="#000000"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/bmi_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/bmi_hint"
            android:textAlignment="center"
            android:textColor="#917D7D"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/BMI_Final" />

        <View
            android:id="@+id/divider_2"
            android:layout_width="250dp"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:background="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bmi_result" />

        <TextView
            android:id="@+id/bmi_sentence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/bmi_sentence_1"
            android:textColor="#000000"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider_2" />

        <ImageView
            android:id="@+id/noSatisfied"
            android:layout_width="73dp"
            android:layout_height="60dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:background="#A2C7FF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bmi_sentence"
            app:srcCompat="@drawable/ic_baseline_sentiment_very_dissatisfied_24" />

        <ImageView
            android:id="@+id/moderate"
            android:layout_width="79dp"
            android:layout_height="60dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:background="#A2C7FF"
            app:layout_constraintStart_toEndOf="@+id/noSatisfied"
            app:layout_constraintTop_toBottomOf="@+id/bmi_sentence"
            app:srcCompat="@drawable/ic_baseline_sentiment_satisfied_24" />

        <ImageView
            android:id="@+id/satisfied"
            android:layout_width="82dp"
            android:layout_height="60dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:background="#A2C7FF"
            app:layout_constraintStart_toEndOf="@+id/moderate"
            app:layout_constraintTop_toBottomOf="@+id/bmi_sentence"
            app:srcCompat="@drawable/ic_baseline_sentiment_very_satisfied_24" />

        <TextView
            android:id="@+id/noSatisfied_quote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_border"
            android:text="@string/unsatisfied"
            android:textColor="#000000"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/moderate" />

        <TextView
            android:id="@+id/moderate_quote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="51dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_border"
            android:text="@string/moderate"
            android:textColor="#000000"
            app:layout_constraintStart_toEndOf="@+id/noSatisfied_quote"
            app:layout_constraintTop_toBottomOf="@+id/moderate" />

        <TextView
            android:id="@+id/satisfied_quote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_border"
            android:text="@string/satisfied"
            android:textColor="#000000"
            app:layout_constraintStart_toEndOf="@+id/moderate_quote"
            app:layout_constraintTop_toBottomOf="@+id/satisfied" />

        <Button
            android:id="@+id/calculate_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/calculate"
            app:cornerRadius="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.473"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/moderate_quote" />




    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>