<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".WorkoutDetails">

        <ImageButton
            android:id="@+id/backbtn"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginTop="2dp"
            android:backgroundTint="#FFFFFF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="?attr/homeAsUpIndicator" />

        <ImageView
            android:id="@+id/cover"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/cover"
            android:src="@drawable/ic_launcher_background"
            tools:ignore="ImageContrastCheck,ImageContrastCheck" />

    <TextView
        android:id="@+id/title"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/title_place_holder"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:lines="2"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/author"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/author_placeholder"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:lines="1" />

    <TextView
        android:id="@+id/description"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/author_placeholder"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

        <Button
            android:id="@+id/but1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:background="@color/black"
            android:backgroundTint="#DFDFDF"
            android:text="@string/tutorial"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:visibility="visible"
            app:iconTint="#FFFFFF"
            tools:visibility="visible" />

    </LinearLayout>
</ScrollView>